DDF-3297 added security manager for DDF container